parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls statement

   4  formals_opt :
   5              | formal_list

   6  formal_list : typ ID
   7              | formal_list COMMA typ ID

   8  expr_opt :
   9           | expr

  10  args_opt :
  11           | args_list

  12  args_list : expr
  13            | args_list COMMA expr

  14  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmnt_list RBRACE

  15  stmnt_list :
  16             | stmnt_list statement

  17  typ : INT
  18      | BOOL
  19      | FLOAT
  20      | STRING
  21      | LAMBDA
  22      | NONE
  23      | TABLE
  24      | TUPLE
  25      | LIST

  26  primitives : ILIT
  27             | FLIT
  28             | BLIT
  29             | SLIT

  30  array :
  31        | primitives
  32        | array COMMA primitives

  33  statement : expr SEMI
  34            | RETURN expr_opt SEMI
  35            | IF LPAREN expr RPAREN LBRACE stmnt_list RBRACE
  36            | IF LPAREN expr RPAREN LBRACE stmnt_list RBRACE ELSE LBRACE stmnt_list RBRACE
  37            | WHILE LPAREN expr RPAREN LBRACE stmnt_list RBRACE
  38            | BREAK SEMI
  39            | ID ASSIGN expr SEMI
  40            | typ ID ASSIGN expr SEMI
  41            | typ ID SEMI
  42            | PRINT expr
  43            | fdecl

  44  expr : ILIT
  45       | FLIT
  46       | BLIT
  47       | SLIT
  48       | ID
  49       | expr PLUS expr
  50       | expr MINUS expr
  51       | expr TIMES expr
  52       | expr DIVIDE expr
  53       | expr POW expr
  54       | expr MOD expr
  55       | expr LOG expr
  56       | expr EQ expr
  57       | expr NEQ expr
  58       | expr LT expr
  59       | expr LEQ expr
  60       | expr GT expr
  61       | expr GEQ expr
  62       | expr AND expr
  63       | expr OR expr
  64       | MINUS expr
  65       | NOT expr
  66       | ID LPAREN args_opt RPAREN
  67       | expr DOT ID LPAREN args_opt RPAREN
  68       | LBRACK array RBRACK
  69       | LPAREN array RPAREN

  70  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (70)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (70)

	.  reduce 70


state 4
	program : decls . EOF  (1)
	decls : decls . statement  (3)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	RETURN  shift 9
	IF  shift 10
	WHILE  shift 11
	PRINT  shift 12
	BREAK  shift 13
	INT  shift 14
	BOOL  shift 15
	FLOAT  shift 16
	NONE  shift 17
	STRING  shift 18
	LAMBDA  shift 19
	TABLE  shift 20
	LIST  shift 21
	TUPLE  shift 22
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 26
	FLIT  shift 27
	EOF  shift 28
	.  error

	statement  goto 29
	typ  goto 30
	expr  goto 31
	fdecl  goto 32


state 5
	expr : LPAREN . array RPAREN  (69)
	array : .  (30)

	ILIT  shift 33
	BLIT  shift 34
	SLIT  shift 35
	FLIT  shift 36
	RPAREN  reduce 30
	COMMA  reduce 30

	primitives  goto 37
	array  goto 38


state 6
	expr : LBRACK . array RBRACK  (68)
	array : .  (30)

	ILIT  shift 33
	BLIT  shift 34
	SLIT  shift 35
	FLIT  shift 36
	RBRACK  reduce 30
	COMMA  reduce 30

	primitives  goto 37
	array  goto 39


state 7
	expr : MINUS . expr  (64)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 41


state 8
	expr : NOT . expr  (65)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 42


state 9
	statement : RETURN . expr_opt SEMI  (34)
	expr_opt : .  (8)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	SEMI  reduce 8

	expr_opt  goto 43
	expr  goto 44


state 10
	statement : IF . LPAREN expr RPAREN LBRACE stmnt_list RBRACE  (35)
	statement : IF . LPAREN expr RPAREN LBRACE stmnt_list RBRACE ELSE LBRACE stmnt_list RBRACE  (36)

	LPAREN  shift 45
	.  error


state 11
	statement : WHILE . LPAREN expr RPAREN LBRACE stmnt_list RBRACE  (37)

	LPAREN  shift 46
	.  error


state 12
	statement : PRINT . expr  (42)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 47


state 13
	statement : BREAK . SEMI  (38)

	SEMI  shift 48
	.  error


state 14
	typ : INT .  (17)

	.  reduce 17


state 15
	typ : BOOL .  (18)

	.  reduce 18


state 16
	typ : FLOAT .  (19)

	.  reduce 19


state 17
	typ : NONE .  (22)

	.  reduce 22


state 18
	typ : STRING .  (20)

	.  reduce 20


state 19
	typ : LAMBDA .  (21)

	.  reduce 21


state 20
	typ : TABLE .  (23)

	.  reduce 23


state 21
	typ : LIST .  (25)

	.  reduce 25


state 22
	typ : TUPLE .  (24)

	.  reduce 24


state 23
	expr : ILIT .  (44)

	.  reduce 44


state 24
	expr : BLIT .  (46)

	.  reduce 46


state 25
	expr : SLIT .  (47)

	.  reduce 47


state 26
	statement : ID . ASSIGN expr SEMI  (39)
	expr : ID .  (48)
	expr : ID . LPAREN args_opt RPAREN  (66)

	LPAREN  shift 49
	ASSIGN  shift 50
	SEMI  reduce 48
	DOT  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	POW  reduce 48
	LOG  reduce 48
	MOD  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LT  reduce 48
	LEQ  reduce 48
	GT  reduce 48
	GEQ  reduce 48
	AND  reduce 48
	OR  reduce 48


state 27
	expr : FLIT .  (45)

	.  reduce 45


state 28
	program : decls EOF .  (1)

	.  reduce 1


state 29
	decls : decls statement .  (3)

	.  reduce 3


state 30
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE stmnt_list RBRACE  (14)
	statement : typ . ID ASSIGN expr SEMI  (40)
	statement : typ . ID SEMI  (41)

	ID  shift 51
	.  error


state 31
	statement : expr . SEMI  (33)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	SEMI  shift 52
	DOT  shift 53
	PLUS  shift 54
	MINUS  shift 55
	TIMES  shift 56
	DIVIDE  shift 57
	POW  shift 58
	LOG  shift 59
	MOD  shift 60
	EQ  shift 61
	NEQ  shift 62
	LT  shift 63
	LEQ  shift 64
	GT  shift 65
	GEQ  shift 66
	AND  shift 67
	OR  shift 68
	.  error


state 32
	statement : fdecl .  (43)

	.  reduce 43


state 33
	primitives : ILIT .  (26)

	.  reduce 26


state 34
	primitives : BLIT .  (28)

	.  reduce 28


state 35
	primitives : SLIT .  (29)

	.  reduce 29


state 36
	primitives : FLIT .  (27)

	.  reduce 27


state 37
	array : primitives .  (31)

	.  reduce 31


state 38
	array : array . COMMA primitives  (32)
	expr : LPAREN array . RPAREN  (69)

	RPAREN  shift 69
	COMMA  shift 70
	.  error


state 39
	array : array . COMMA primitives  (32)
	expr : LBRACK array . RBRACK  (68)

	RBRACK  shift 71
	COMMA  shift 70
	.  error


40: shift/reduce conflict (shift 49, reduce 48) on LPAREN
state 40
	expr : ID .  (48)
	expr : ID . LPAREN args_opt RPAREN  (66)

	LPAREN  shift 49
	RPAREN  reduce 48
	RBRACE  reduce 48
	LBRACK  reduce 48
	COMMA  reduce 48
	SEMI  reduce 48
	DOT  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	TIMES  reduce 48
	DIVIDE  reduce 48
	POW  reduce 48
	LOG  reduce 48
	MOD  reduce 48
	NOT  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LT  reduce 48
	LEQ  reduce 48
	GT  reduce 48
	GEQ  reduce 48
	AND  reduce 48
	OR  reduce 48
	RETURN  reduce 48
	IF  reduce 48
	WHILE  reduce 48
	PRINT  reduce 48
	BREAK  reduce 48
	INT  reduce 48
	BOOL  reduce 48
	FLOAT  reduce 48
	NONE  reduce 48
	STRING  reduce 48
	LAMBDA  reduce 48
	TABLE  reduce 48
	LIST  reduce 48
	TUPLE  reduce 48
	ILIT  reduce 48
	BLIT  reduce 48
	SLIT  reduce 48
	ID  reduce 48
	FLIT  reduce 48
	EOF  reduce 48


state 41
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : MINUS expr .  (64)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	DOT  shift 53
	LPAREN  reduce 64
	RPAREN  reduce 64
	RBRACE  reduce 64
	LBRACK  reduce 64
	COMMA  reduce 64
	SEMI  reduce 64
	PLUS  reduce 64
	MINUS  reduce 64
	TIMES  reduce 64
	DIVIDE  reduce 64
	POW  reduce 64
	LOG  reduce 64
	MOD  reduce 64
	NOT  reduce 64
	EQ  reduce 64
	NEQ  reduce 64
	LT  reduce 64
	LEQ  reduce 64
	GT  reduce 64
	GEQ  reduce 64
	AND  reduce 64
	OR  reduce 64
	RETURN  reduce 64
	IF  reduce 64
	WHILE  reduce 64
	PRINT  reduce 64
	BREAK  reduce 64
	INT  reduce 64
	BOOL  reduce 64
	FLOAT  reduce 64
	NONE  reduce 64
	STRING  reduce 64
	LAMBDA  reduce 64
	TABLE  reduce 64
	LIST  reduce 64
	TUPLE  reduce 64
	ILIT  reduce 64
	BLIT  reduce 64
	SLIT  reduce 64
	ID  reduce 64
	FLIT  reduce 64
	EOF  reduce 64


state 42
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : NOT expr .  (65)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	DOT  shift 53
	LPAREN  reduce 65
	RPAREN  reduce 65
	RBRACE  reduce 65
	LBRACK  reduce 65
	COMMA  reduce 65
	SEMI  reduce 65
	PLUS  reduce 65
	MINUS  reduce 65
	TIMES  reduce 65
	DIVIDE  reduce 65
	POW  reduce 65
	LOG  reduce 65
	MOD  reduce 65
	NOT  reduce 65
	EQ  reduce 65
	NEQ  reduce 65
	LT  reduce 65
	LEQ  reduce 65
	GT  reduce 65
	GEQ  reduce 65
	AND  reduce 65
	OR  reduce 65
	RETURN  reduce 65
	IF  reduce 65
	WHILE  reduce 65
	PRINT  reduce 65
	BREAK  reduce 65
	INT  reduce 65
	BOOL  reduce 65
	FLOAT  reduce 65
	NONE  reduce 65
	STRING  reduce 65
	LAMBDA  reduce 65
	TABLE  reduce 65
	LIST  reduce 65
	TUPLE  reduce 65
	ILIT  reduce 65
	BLIT  reduce 65
	SLIT  reduce 65
	ID  reduce 65
	FLIT  reduce 65
	EOF  reduce 65


state 43
	statement : RETURN expr_opt . SEMI  (34)

	SEMI  shift 72
	.  error


state 44
	expr_opt : expr .  (9)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	DOT  shift 53
	PLUS  shift 54
	MINUS  shift 55
	TIMES  shift 56
	DIVIDE  shift 57
	POW  shift 58
	LOG  shift 59
	MOD  shift 60
	EQ  shift 61
	NEQ  shift 62
	LT  shift 63
	LEQ  shift 64
	GT  shift 65
	GEQ  shift 66
	AND  shift 67
	OR  shift 68
	SEMI  reduce 9


state 45
	statement : IF LPAREN . expr RPAREN LBRACE stmnt_list RBRACE  (35)
	statement : IF LPAREN . expr RPAREN LBRACE stmnt_list RBRACE ELSE LBRACE stmnt_list RBRACE  (36)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 73


state 46
	statement : WHILE LPAREN . expr RPAREN LBRACE stmnt_list RBRACE  (37)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 74


state 47
	statement : PRINT expr .  (42)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	DOT  shift 53
	PLUS  shift 54
	MINUS  shift 55
	TIMES  shift 56
	DIVIDE  shift 57
	POW  shift 58
	LOG  shift 59
	MOD  shift 60
	EQ  shift 61
	NEQ  shift 62
	LT  shift 63
	LEQ  shift 64
	GT  shift 65
	GEQ  shift 66
	AND  shift 67
	OR  shift 68
	LPAREN  reduce 42
	RBRACE  reduce 42
	LBRACK  reduce 42
	NOT  reduce 42
	RETURN  reduce 42
	IF  reduce 42
	WHILE  reduce 42
	PRINT  reduce 42
	BREAK  reduce 42
	INT  reduce 42
	BOOL  reduce 42
	FLOAT  reduce 42
	NONE  reduce 42
	STRING  reduce 42
	LAMBDA  reduce 42
	TABLE  reduce 42
	LIST  reduce 42
	TUPLE  reduce 42
	ILIT  reduce 42
	BLIT  reduce 42
	SLIT  reduce 42
	ID  reduce 42
	FLIT  reduce 42
	EOF  reduce 42


state 48
	statement : BREAK SEMI .  (38)

	.  reduce 38


state 49
	expr : ID LPAREN . args_opt RPAREN  (66)
	args_opt : .  (10)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	RPAREN  reduce 10

	expr  goto 75
	args_opt  goto 76
	args_list  goto 77


state 50
	statement : ID ASSIGN . expr SEMI  (39)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 78


state 51
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE stmnt_list RBRACE  (14)
	statement : typ ID . ASSIGN expr SEMI  (40)
	statement : typ ID . SEMI  (41)

	LPAREN  shift 79
	SEMI  shift 80
	ASSIGN  shift 81
	.  error


state 52
	statement : expr SEMI .  (33)

	.  reduce 33


state 53
	expr : expr DOT . ID LPAREN args_opt RPAREN  (67)

	ID  shift 82
	.  error


state 54
	expr : expr PLUS . expr  (49)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 83


state 55
	expr : expr MINUS . expr  (50)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 84


state 56
	expr : expr TIMES . expr  (51)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 85


state 57
	expr : expr DIVIDE . expr  (52)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 86


state 58
	expr : expr POW . expr  (53)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 87


state 59
	expr : expr LOG . expr  (55)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 88


state 60
	expr : expr MOD . expr  (54)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 89


state 61
	expr : expr EQ . expr  (56)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 90


state 62
	expr : expr NEQ . expr  (57)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 91


state 63
	expr : expr LT . expr  (58)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 92


state 64
	expr : expr LEQ . expr  (59)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 93


state 65
	expr : expr GT . expr  (60)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 94


state 66
	expr : expr GEQ . expr  (61)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 95


state 67
	expr : expr AND . expr  (62)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 96


state 68
	expr : expr OR . expr  (63)

	LPAREN  shift 5
	LBRACK  shift 6
	MINUS  shift 7
	NOT  shift 8
	ILIT  shift 23
	BLIT  shift 24
	SLIT  shift 25
	ID  shift 40
	FLIT  shift 27
	.  error

	expr  goto 97


state 69
	expr : LPAREN array RPAREN .  (69)

	.  reduce 69


state 70
	array : array COMMA . primitives  (32)

	ILIT  shift 33
	BLIT  shift 34
	SLIT  shift 35
	FLIT  shift 36
	.  error

	primitives  goto 98


state 71
	expr : LBRACK array RBRACK .  (68)

	.  reduce 68


state 72
	statement : RETURN expr_opt SEMI .  (34)

	.  reduce 34


state 73
	statement : IF LPAREN expr . RPAREN LBRACE stmnt_list RBRACE  (35)
	statement : IF LPAREN expr . RPAREN LBRACE stmnt_list RBRACE ELSE LBRACE stmnt_list RBRACE  (36)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	RPAREN  shift 99
	DOT  shift 53
	PLUS  shift 54
	MINUS  shift 55
	TIMES  shift 56
	DIVIDE  shift 57
	POW  shift 58
	LOG  shift 59
	MOD  shift 60
	EQ  shift 61
	NEQ  shift 62
	LT  shift 63
	LEQ  shift 64
	GT  shift 65
	GEQ  shift 66
	AND  shift 67
	OR  shift 68
	.  error


state 74
	statement : WHILE LPAREN expr . RPAREN LBRACE stmnt_list RBRACE  (37)
	expr : expr . PLUS expr  (49)
	expr : expr . MINUS expr  (50)
	expr : expr . TIMES expr  (51)
	expr : expr . DIVIDE expr  (52)
	expr : expr . POW expr  (53)
	expr : expr . MOD expr  (54)
	expr : expr . LOG expr  (55)
	expr : expr . EQ expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LEQ expr  (59)
	expr : expr . GT expr  (60)
	expr : expr . GEQ expr  (61)
	expr : expr . AND expr  (62)
	expr : expr . OR expr  (63)
	expr : expr . DOT ID LPAREN args_opt RPAREN  (67)

	RPAREN  shift 100
	DOT  shift 53
	PLUS  shift 54
	MINUS  shift 55
	TIMES  shift 56
	DIVIDE  shift 57
	POW  shift 58
	LOG  shift 59
	MOD  shift 60
	EQ  shift 61
	NEQ  shift 62
	LT  shift 63
	LEQ  shift 64
	GT  shift 65
	GEQ  shift 66
	AND  shift 67
	OR  shift 68
	.  error

